# CFU-Playground

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  AUTHORS  CFUPlay_no_tflm.ipynb  CFUPlay_prof_tflm.ipynb  CFUPlayground_DesignSpaceExploration.ipynb  CODE_OF_CONDUCT.md  Gemfile  Makefile  NOTES  README.md  _config.yml  about.markdown  cfuplayground.ipynb  environment  environment.yml  index.html  index.markdown  index.md  requirements.markdown  schedule.markdown  staff.markdown  team.markdown
_event_pages/: event-0.markdown  event-1.markdown  event-2.markdown  event-3.markdown  event-4.markdown  event-5.markdown  event-6.markdown  event-7.markdown  event-8.markdown
_fccm-2022-pages/: event-0.markdown  event-1.markdown  event-2.markdown  event-3.markdown  event-4.markdown  event-5.markdown  event-6.markdown  event-7.markdown  event-8.markdown  team.markdown
_hpca-2023-pages/: event-0.markdown  event-1.markdown  event-2.markdown  event-4.markdown  event-5.markdown  event-6.markdown  event-7.markdown  team.markdown
_includes/: head.html  header.md  sidebar.html
_layouts/: default.html  home-page.html  page.html
_workshops/: FCCM_2022.markdown  HPCA_2023.markdown  MICRO_2022.markdown
assets/: end-to-end_old.markdown  golden-tests_old.markdown
basic_cfu/: Makefile
camera/: Makefile  NOTES  extract_image.py  litex-vexriscv-tflite.resc
common/: Makefile  interact.expect
common/renode-verilator-integration/: CMakeLists.txt  renode_h.patch  sim_main.cpp
conf/: environment-symbiflow.yml  environment.yml  renode.version  requirements-symbiflow.txt  requirements.txt  tflite-micro.version
convolutions/: c_test_conv_v2.cc  cfu_conv_v1.v  cfu_conv_v2.v  test
custom_bin/: xxd
docs/: Makefile  requirements.txt
generic_tflm_app/: Makefile
models/: .gitignore  deployment_tools.py  generate_data.py  measure_time.py  test.ipynb  test.py
models_plots/: make_confusion_matrices2.py  make_merged_snrs.py  make_plots.py  (+1 more)
(+3568 files in other folders)
